--- a/index.html
+++ b/index.html
@@ -3,12 +3,32 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Tic Tac Toe</title>
     <link rel="stylesheet" href="minimize.css">
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    
+    <div class="header">Tic-Tac-Toe</div>
+    <div class="container">
+        <div class="overlay">
+            <div class="result">Nothing Yet</div>
+            <div class="newGameButton">New Game</div>
+        </div>
+        
+        <div class="player-heading">GET READY</div>
+        <div class="gameboard">
+            <div class="square row1 col1"></div>
+            <div class="square row1 col2"></div>
+            <div class="square row1 col3"></div>
+            <div class="square row2 col1"></div>
+            <div class="square row2 col2"></div>
+            <div class="square row2 col3"></div>
+            <div class="square row3 col1"></div>
+            <div class="square row3 col2"></div>
+            <div class="square row3 col3"></div>
+        </div>
+        <div class="resetButton">Reset</div>
+    </div>
     <script type="module" src="script.js"></script>
 </body>
 </html>
